[package]
name = "http_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-server = "0.7.2"
hyper = "1.6.0"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "full"] }
tokio-rustls = "0.26.2"
tokio-stream = "0.1.17"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


